[package]
name = "isholiday"
description = "check is holiday for iranian"
homepage = "https://github.com/robatipoor/isholiday"
keywords = ["holiday", "persian","iran","date"]
license = "MIT"
repository = "https://github.com/robatipoor/isholiday"
version = "0.1.0"
authors = ["Mahdi Robatipoor <Mahdi.robatipoor@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.6"
serde = "1.0.84"
serde_json = "1.0.34"
serde_derive = "1.0.84"
colored = "1.7.0"

